--- a/DaysOff/manifest.json
+++ b/DaysOff/manifest.json
@@ -4,5 +4,18 @@
   "start_url": "/DaysOff/index.html",
   "display": "standalone",
   "background_color": "#fffff",
-  "theme_color": "#3184ce"
+  "theme_color": "#3184ce",
+  "icons": [
+    {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    }
+  ]
 }
+
