--- a/calendario/manifest.json
+++ b/calendario/manifest.json
@@ -2,7 +2,7 @@
   
   "name": "Calendario",
   "short_name": "Calendario",
-  "start_url": "/index.html",
+  "start_url": "/calendario/index.html",
   "display": "standalone",
   "background_color": "rgb(247,247,250)",
   "theme_color": "rgb(247,247,250)"
