--- a/ImagesChart/manifest.json
+++ b/ImagesChart/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ImagesChart",
   "short_name": "ImagesChart",
-  "start_url": "ImagesChart/index.html",
+  "start_url": "/ImagesChart/index.html",
   "display": "standalone",
   "background_color": "#e0e0e0",
   "theme_color": "#e0e0e0"
