--- a/calendario/manifest.json
+++ b/calendario/manifest.json
@@ -7,22 +7,22 @@
   "theme_color": "rgb(247,247,250)",
   "icons": [
     {
-      "src": "/icon48.png",
+      "src": "/calendario/icon.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/icon96.png",
+      "src": "/calendario/icon.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/icon144.png",
+      "src": "/calendario/icon.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/icon192.png",
+      "src": "/calendario/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
