--- a/orariostefy/manifest.json
+++ b/orariostefy/manifest.json
@@ -7,22 +7,22 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/orariostefy/index.html",
+      "src": "/orariostefy/icon.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/orariostefy/index.html",
+      "src": "/orariostefy/icon.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/orariostefy/index.html",
+      "src": "/orariostefy/icon.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/orariostefy/index.html",
+      "src": "/orariostefy/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
