--- a/orariosonia/manifest.json
+++ b/orariosonia/manifest.json
@@ -1,28 +1,28 @@
 {
   "name": "Lavoro",
   "short_name": "Lavoro",
-  "start_url": "/orariostefy/index.html",
+  "start_url": "/orariosonia/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/orariostefy/icon.png",
+      "src": "/orariosonia/icon.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/orariostefy/icon.png",
+      "src": "/orariosonia/icon.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/orariostefy/icon.png",
+      "src": "/orariosonia/icon.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/orariostefy/icon.png",
+      "src": "/orariosonia/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
