--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,14 @@
 {
   "name": "FS",
   "short_name": "FS",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000"
+  "start_url": ".",
+  "display": "fullscreen",
+  "background_color": "#000",
+  "theme_color": "#000",
+  "icons": [{
+    "src": "./icon.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }]
 }
 
