--- a/2048/manifest.json
+++ b/2048/manifest.json
@@ -1,9 +1,16 @@
 {
-  "name": "2048",
+  "name": "2048 Game",
   "short_name": "2048",
-  "start_url": ".",
-  "display": "fullscreen",
-  "background_color": "#000",
-  "theme_color": "#000"
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
 
