--- a/2048/manifest.json
+++ b/2048/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "2048 Game",
   "short_name": "2048",
-  "start_url": "/",
+  "start_url": "/2048/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
